# todo-list-rs

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.postgres.yml
migrations/: 20220809203727_init.down.sql  20220809203727_init.up.sql
src/: main.rs
src/db/: list.rs  mod.rs  task.rs  user.rs
src/handlers/: list.rs  mod.rs  task.rs  user.rs
src/middlewares/: bearer_auth.rs  mod.rs
src/models/: claims.rs  error.rs  list.rs  mod.rs  task.rs  user.rs
src/utils/: db.rs  logging.rs  mod.rs
