[package]
name = "todo-list-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.20.1", features = ["rt", "macros", "rt-multi-thread"] }

actix-web = "4.1.0"

dotenv = "0.15.0"

# logging
slog-stdlog = "4.1.1"
log = "0.4.17"
slog = "2.7"
slog-term = "2.9"
slog-async = "2.7"
slog-json = "2.6"
slog-stream = "1.2"
slog-atomic = "3.1"
slog-scope = "4.4.0"
time = "0.3"

sqlx = { version = "0.6.1", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "migrate", "postgres", "uuid" ] }

#https://github.com/rust-lang/rust/issues/100062
# I set last 'anyhow' state
anyhow = { git = "https://github.com/dtolnay/anyhow.git" }

serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"

derive_more = "0.99.17"

uuid = { version = "1.1.2", features=["v4", "serde"] }

jsonwebtoken = "8.1.1"
futures = "0.3.21"

chrono = "0.4.21"